New heading added in two files

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>hello</h1>
+    <h2>This is my new heading</h2>
   </body>
   <script src="./car.js"></script>
 </html>
