this is a new paragrap

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h2>This is my new heading</h2>
+    <p>this is a paragraph</p>
   </body>
   <script src="./car.js"></script>
 </html>
