--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <h2>This is my new heading</h2>
     <p>this is a paragraph</p>
+    <h5>this is a new branch</h5>
   </body>
   <script src="./car.js"></script>
 </html>
