--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h2>This is my new heading</h2>
     <p>this is a paragraph</p>
     <h5>this is a new branch</h5>
+    <h3>this is now third heading</h3>
   </body>
   <script src="./car.js"></script>
 </html>
