--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p>this is a paragraph</p>
     <h5>this is a new branch</h5>
     <h3>this is now third heading</h3>
+    <h4>this is now h4</h4>
   </body>
   <script src="./car.js"></script>
 </html>
