--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h5>this is a new branch</h5>
     <h3>this is now third heading</h3>
     <h4>this is now h4</h4>
+    <h1>my name</h1>
   </body>
   <script src="./car.js"></script>
 </html>
